<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">1MileDrivingApp</string>
    <string name="waiting">Waiting to detect speed\n\n</string>
    <string name="title_location_permission">Location Permission Needed</string>
    <string name="ok">Ok</string>
    <string name="text_location_permission">Please provide us location permission</string>
    <string name="gps_network_not_enabled">GPS not available</string>
    <string name="open_location_settings">Open Location setting</string>
    <string name="cancel">Cancle</string>

    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START TRIP</string>
    <string name="btn_stop_location_updates">STOP TRIP</string>

    <string name="alpha">Alpha</string>
    <string name="clickable">Clickable</string>
    <string name="hue">Hue</string>
    <string name="width">Width</string>
    <string name="polyline_demo_label">MapsActivity</string>
    <string name="polyline_demo_description">Demonstrates how to add Polylines to a map.</string>
    <string name="cap_butt">Butt</string>
    <string name="cap_square">Square</string>
    <string name="cap_round">Round</string>
    <string name="cap_image">Image</string>
    <string name="joint_type_default">Default</string>
    <string name="joint_type_bevel">Bevel</string>
    <string name="joint_type_round">Round</string>
    <string name="pattern_solid">Solid</string>
    <string name="pattern_dotted">Dotted</string>
    <string name="pattern_dashed">Dashed</string>
    <string name="pattern_mixed">Mixed</string>
    <string name="start_cap">Start cap</string>
    <string name="end_cap">End cap</string>
    <string name="joint_type">Joint Type</string>
    <string name="pattern">Pattern</string>
    <string name="journey_id">Journey Id</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="travel_time">Travel Time</string>
    <string name="distracted_time">Distracted Time</string>
    <string name="journey_list">Journey List</string>
    <string name="driving_behaviour">Driving behaviour of journey.</string>
    <string name="predict_io_status">Predict IO Status</string>


    <string name="action_settings">Settings</string>
    <string name="rationale_pio_permissions">This feature needs access to your locations (anonymously of course).</string>
    <string name="title_activity_maps">Map</string>
    <string name="home_zone">Home Zone</string>
    <string name="work_zone">Work Zone</string>
    <string name="no_zone_detected_message">No zone information available at this moment.\nPlease check again after some trips.</string>
    <string name="show_home_work_zones">Show home/work zones</string>
    <string name="status">Status</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="event_in_home_zone">Event triggered within home zone.</string>
    <string name="event_in_work_zone">Event triggered within work zone.</string>
    <string name="mile">1 Mile Predict IO integration test app</string>
    <string name="splash">1Mile driving + Predict IO App</string>

</resources>
